# rdata

./: .all-contributorsrc  .gitattributes  .gitignore  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  readthedocs-requirements.txt  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: main.yml  mypy.yml  ruff.yml
asv_benchmarks/: .gitignore  asv.conf.json
asv_benchmarks/benchmarks/: array_parsing.py
docs/: .gitignore  Makefile  __init__.py  apilist.rst  conf.py  conversions.rst  index.rst  installation.rst  internalapi.rst  make.bat  simpleusage.rst
docs/_static/: switcher.json
docs/_templates/autosummary/: class.rst  module.rst
docs/auto_examples/: index.rst  plot_example.ipynb  plot_example.py  plot_example.py.md5  plot_example.rst  plot_example_codeobj.pickle  searchindex.dir  sg_execution_times.rst
examples/: README.txt  __init__.py  plot_cran.py  plot_example.py  plot_zenodo.py
paper/: .gitignore  paper.bib  paper.md
rdata/: __init__.py  _conversion.py  _format.py  _read.py  _write.py  missing.py  py.typed  testing.py
rdata/conversion/: __init__.py  _conversion.py  to_r.py
rdata/io/: __init__.py  ascii.py  base.py  xdr.py
rdata/parser/: __init__.py  _ascii.py  _parser.py  _xdr.py
rdata/tests/: __init__.py  test_missing.py  test_rdata.py  test_write.py
rdata/tests/data/: test_altrep_compact_intseq.rda  test_altrep_compact_intseq_asymmetric.rda  test_altrep_compact_realseq.rda  test_altrep_compact_realseq_asymmetric.rda  test_altrep_deferred_string.rda  test_altrep_wrap_logical.rda  test_altrep_wrap_real.rda  test_altrep_wrap_real_attributes.rds  test_altrep_wrap_real_class_attribute.rds  test_altrep_wrap_string.rda  test_ascii_ascii_chars.rds  test_ascii_chars.rds  test_ascii_empty_str.rds  test_ascii_na_string.rds  test_ascii_nan_inf.rds  test_ascii_v2.rda  test_ascii_v2.rds  test_ascii_v3.rda  test_ascii_v3.rds  test_ascii_win_v2.rda  test_ascii_win_v2.rds  test_ascii_win_v3.rda  test_ascii_win_v3.rds  test_builtin.rda  test_complex.rda  test_dataframe.rda  test_dataframe.rds  test_dataframe_dtypes.rds  test_dataframe_dtypes_with_na.rds  test_dataframe_float_with_na_nan.rds  test_dataframe_int_rownames.rds  test_dataframe_range_rownames.rds  test_dataframe_rownames.rda  test_dataframe_v3.rda  test_dataframe_v3.rds  test_empty_function.rda  test_empty_function_uncompiled.rda  test_empty_list.rds  test_empty_named_list.rds  test_empty_str.rda  (+25 more)
rdata/unparser/: __init__.py  _ascii.py  _unparser.py  _xdr.py
