[project]
name = "rdata"
description = "Read R datasets from Python."
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = [
	"rdata",
	"r",
	"dataset",
]
authors = [
  {name = "Carlos Ramos Carreño", email = "vnmabus@gmail.com"},
]
maintainers = [
  {name = "Carlos Ramos Carreño", email = "vnmabus@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dynamic = ["version"]

dependencies = [
	"numpy",
	"xarray",
	"pandas",
]

[project.optional-dependencies]
docs = [
  "igraph",
  "ipywidgets",
  "jupyterlite-sphinx",
  "jupyterlite-pyodide-kernel",
  "matplotlib",
  "myst-parser",
  "pydata-sphinx-theme",
  "sphinx>=3.1",
  "sphinx-gallery",
]
test = [
  "pytest",
  "pytest-cov",
  "numpy>=1.14",
]

[project.urls]
homepage = "https://github.com/vnmabus/rdata"
documentation = "https://rdata.readthedocs.io"
repository = "https://github.com/vnmabus/rdata"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rdata*"]

[tool.setuptools.dynamic]
version = {attr = "rdata.__version__"}

[tool.ruff]
select = [
    "ALL",
]
ignore = [
	"ANN101", # self does not need to be typed
	"D212", # incompatible with D213, which is our preferred style for multiline docstrings
	"PLC0414", # allow explicit re-exports
	"S101", # assert is allowed
]

[tool.ruff.pydocstyle]
convention = "google"